tests/snapshots/suppression/prose_ignore_lint.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/prose_ignore_lint.input.py
---
align-equals@219..220
docstring-wrap@69..152
loose-constants@206..225
loose-constants@280..294
