tests/snapshots/suppression/prose_off_block.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/prose_off_block.input.py
---
align-equals@304..305
align-equals@310..311
align-equals@382..383
align-equals@389..390
alphabetize@289..314
docstring-wrap@72..260
