tests/snapshots/suppression/prose_off_block.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/prose_off_block.input.py
---
"""
A prose: off / prose: on block sits between two assignment runs that the
alignment rules would otherwise touch. The block survives verbatim while
the runs above and below it pad to their group widths. The native prose
namespace mirrors the fmt namespace's span semantics exactly.
"""

bar_baz = 3
foo     = 2
x       = 1

# prose: off
short = 1
much_longer_name = 2
mid = 3
# prose: on

a   = 1
bb  = 2
ccc = 3
