tests/snapshots/suppression/prose_skip_and_ignore.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/prose_skip_and_ignore.input.py
---
align-equals@256..257
docstring-wrap@53..229
loose-constants@243..262
loose-constants@364..378
