tests/snapshots/suppression/prose_skip_per_rule.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/prose_skip_per_rule.input.py
---
docstring-wrap@66..230
strip-trailing-commas@321..322
